--- a/less/social/basic/grid.less
+++ b/less/social/basic/grid.less
@@ -21,7 +21,7 @@
 	.clear-fix;
 }
 
-.column(@x, @columns:@columns, @direction: left;) {
+.column(@x, @columns:@columns, @direction: left) {
 	@column-size: @total-width / @columns;
 	display: inline;
 	float: @direction;
